fix img overflow

--- a/style.css
+++ b/style.css
@@ -66,27 +66,27 @@ body {
     font-size: 1.8rem;
     font-family: 'Barlow', sans-serif;
     overflow-x: hidden;
-    max-width: 100vw;
-}
-/* 
+    max-width: 1400px;
+  }
+ 
 .container {
-    width: 100%;
-    min-width: 1400px;
+    max-width: 1200px;
     margin: 0 auto;
-} */
+} 
+
+img{
+width: 100%;
+}
 
 
 
 
 /* Hero */
 
-.hero-bg-img {
-background: url('images/desktop/image-header.jpg');
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
+.header {
+background-image: url('images/desktop/image-header.jpg');
+background-size:cover;
 position: relative;
-width: 100%;
 height: 100vh;
 min-width: 1400px;
 }
@@ -96,7 +96,6 @@ min-width: 1400px;
   justify-content: space-between;
   align-items: center;
   padding-top: 3rem;
-  width: 100vw;
 }
 
 nav, nav ul {
@@ -109,7 +108,7 @@ nav a {
 }
 
 .nav-logo {
-    margin: 2em;
+    margin: 2em 0;
     color: var(--white);
     font-size: 3rem;
     font-weight: bold;
@@ -124,10 +123,6 @@ nav a {
   border-radius: 15px;
 }
 
-
-header {
-  position: relative
-}
 
 header h1 {
   position: absolute;
